wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:5.8.3-php7.4-apache
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: nfs
              mountPath: /var/www/html
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
---
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
