load-balancing-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production    
spec:
  rules:
  - host: secure-page.me
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
  tls:
  - hosts:
    - secure-page.me
    secretName: cert-testing
